Summary of important user-visible changes for statistics 1.4.4:
-------------------------------------------------------------------

 New functions:
 ==============


 Improvements:
 =============


Summary of important user-visible changes for statistics 1.4.3:
-------------------------------------------------------------------

 New functions:
 ==============

 ** anova1            (patch #10127)
    kruskalwallis

 ** cluster            (patch #10009)

 ** clusterdata        (patch #10012)

 ** confusionchart     (patch #9985)

 ** confusionmat       (patch #9971)

 ** cophenet           (patch #10040)

 ** datasample         (patch #10050)

 ** evalclusters       (patch #10052)

 ** expfit             (patch #10092)
    explike

 ** gscatter           (patch #10043)

 ** ismissing          (patch #10102)

 ** inconsistent       (patch #10008)

 ** mhsample.m         (patch #10016)

 ** ncx2pdf            (patch #9711)

 ** optimalleaforder.m (patch #10034)

 ** pca                (patch #10104)

 ** rmmissing          (patch #10102)

 ** silhouette         (patch #9743)

 ** slicesample        (patch #10019)

 ** wblplot            (patch #8579)

 Improvements:
 =============

 ** anovan.m: use double instead of toascii (bug #60514)

 ** binocdf: new option "upper" (bug #43721)

 ** boxplot: better Matlab compatibility; several Matlab-compatible
    plot options added (OutlierTags, Sample_IDs, BoxWidth, Widths,
    BoxStyle, Positions, Labels, Colors) and an Octave-specific one
    (CapWidhts); demos added; texinfo improved (patch #9930)

 ** auto MPG (carbig) sample dataset added from
    https://archive.ics.uci.edu/ml/datasets/Auto+MPG (patch #10045)

 ** crosstab.m: make n-dimensional (patch #10014)

 ** dendrogram.m: many improvements (patch #10036)

 ** fitgmdist.m: fix typo in ComponentProportion (bug #59386)

 ** gevfit: change orientation of results for Matlab compatibility (bug #47369)

 ** hygepdf: avoid overflow for certain inputs (bug #35827)
